--- a/def/envs.tex
+++ b/def/envs.tex
@@ -1,3 +1,4 @@
 \newtheorem{definition}{Definition}
 \newtheorem{example}{Example}
 \newtheorem{proposition}{Proposition}
+\newtheorem{theorem}{Theorem}
