--- a/chp/01/sec/01.tex
+++ b/chp/01/sec/01.tex
@@ -432,7 +432,7 @@ Then, it's clear that
     \sum_{{K}\in{T}}(P:K\cap{P})
     ,
   \]
-  there must exist some \({K}\in{\text{Syl}(p,G)}\) such that \((P:K\cap{P})=1\) but, then \(P=K\cap{P}\) and so \({P}\subset{K}\). In particular, if \(H,K\) are any \(p\)-Sylow subgroups \(G\), then there exists \({x}\in{G}\) such that \(H^{x}=K\).
+  there must exist some \({K}\in{\text{Syl}(p,G)}\) such that \((P:K\cap{P})=1\) but, then \({P}\subset{K}\). In particular, if \(H,K\) are any \(p\)-Sylow subgroups \(G\), then there exists \({x}\in{G}\) such that \(H^{x}=K\).
 
   Finally, because we now know that
   \[
